; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_kvdl.c_mlxsw_sp_kvdl_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum_kvdl.c_mlxsw_sp_kvdl_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_sp = type { %struct.mlxsw_sp_kvdl* }
%struct.mlxsw_sp_kvdl = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.mlxsw_sp*, i32, i32, i32, i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlxsw_sp_kvdl_alloc(%struct.mlxsw_sp* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.mlxsw_sp*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.mlxsw_sp_kvdl*, align 8
  store %struct.mlxsw_sp* %0, %struct.mlxsw_sp** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %5, align 8
  %11 = getelementptr inbounds %struct.mlxsw_sp, %struct.mlxsw_sp* %10, i32 0, i32 0
  %12 = load %struct.mlxsw_sp_kvdl*, %struct.mlxsw_sp_kvdl** %11, align 8
  store %struct.mlxsw_sp_kvdl* %12, %struct.mlxsw_sp_kvdl** %9, align 8
  %13 = load %struct.mlxsw_sp_kvdl*, %struct.mlxsw_sp_kvdl** %9, align 8
  %14 = getelementptr inbounds %struct.mlxsw_sp_kvdl, %struct.mlxsw_sp_kvdl* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32 (%struct.mlxsw_sp*, i32, i32, i32, i32*)*, i32 (%struct.mlxsw_sp*, i32, i32, i32, i32*)** %16, align 8
  %18 = load %struct.mlxsw_sp*, %struct.mlxsw_sp** %5, align 8
  %19 = load %struct.mlxsw_sp_kvdl*, %struct.mlxsw_sp_kvdl** %9, align 8
  %20 = getelementptr inbounds %struct.mlxsw_sp_kvdl, %struct.mlxsw_sp_kvdl* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 %17(%struct.mlxsw_sp* %18, i32 %21, i32 %22, i32 %23, i32* %24)
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
